Fix jump links.
- To work, jump links must be at the top, with almost no content above them.
- MW used "jump" to refer to it's "Jump to navigation", for "... to content" it's typically good to use "Skip" instead of "Jump" since these were originally called "Skip links"
- i18n keys should also be prefixed.
- Jump links should not be display: none; Screen readers nowadays use standard browsers, not text browsers. So using display: none; essentially disables jump links entirely. You also want them to be visible on-focus because these links are used by users with motor disabilities in addition to just blind users.

--- a/assets/wiki-style.css
+++ b/assets/wiki-style.css
@@ -474,7 +474,15 @@ div.searchresult {
 }
 
 .mw-jump {
-	display: none;
+	position: absolute;
+	top: 1em;
+	left: 1em;
+	z-index: 1;
+	color: #fff;
+	font-size: 1.25em;
+}
+.mw-jump a {
+	color: #fff;
 }
 
 img#logo {
